# jeera

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  release-plz.toml
jeera/: Cargo.toml
jeera-derive/: Cargo.toml
jeera-derive/src/: lib.rs
jeera/src/: lib.rs  logging.rs  main.rs  termination.rs
jeera/src/api/: mod.rs  models.rs
jeera/src/state/: action.rs  app_initializer.rs  config.rs  mod.rs  server.rs  state_store.rs
jeera/src/ui/: mod.rs  router_component.rs  tab_page.rs  ui_action.rs  ui_loop.rs
jeera/src/ui/components/: background_tasks.rs  component.rs  create_issue.rs  dropdown_menu.rs  issue_detail.rs  (+3 more)
jira_cloud_v3_async/: Cargo.toml  README.md
jira_cloud_v3_async/.openapi-generator/: FILES
jira_cloud_v3_async/src/apis/: announcement_banner_api.rs  app_data_policies_api.rs  application_roles_api.rs  audit_records_api.rs  avatars_api.rs  classification_levels_api.rs  configuration.rs  dashboards_api.rs  filter_sharing_api.rs  filters_api.rs  group_and_user_picker_api.rs  groups_api.rs  issue_attachments_api.rs  issue_bulk_operations_api.rs  issue_comment_properties_api.rs  issue_comments_api.rs  issue_custom_field_configuration_apps_api.rs  issue_custom_field_contexts_api.rs  issue_custom_field_options_api.rs  issue_custom_field_options_apps_api.rs  issue_custom_field_values_apps_api.rs  issue_field_configurations_api.rs  issue_fields_api.rs  issue_link_types_api.rs  issue_links_api.rs  issue_navigator_settings_api.rs  issue_notification_schemes_api.rs  issue_priorities_api.rs  issue_properties_api.rs  issue_remote_links_api.rs  issue_resolutions_api.rs  issue_search_api.rs  issue_security_level_api.rs  issue_security_schemes_api.rs  issue_type_properties_api.rs  issue_type_schemes_api.rs  issue_type_screen_schemes_api.rs  issue_types_api.rs  issue_votes_api.rs  issue_watchers_api.rs  (+48 more)
jira_cloud_v3_async/src/models/: bulk_edit_get_fields.rs  bulk_fetch_issue_request_bean.rs  bulk_operation_error_response.rs  bulk_operation_progress.rs  comment.rs  create_project_details.rs  error_message.rs  fields.rs  filter.rs  filter_details.rs  id_bean.rs  issue_bulk_edit_field.rs  issue_bulk_edit_payload.rs  issue_bulk_move_payload.rs  issue_link_type.rs  jira_cascading_select_field.rs  jira_color_field.rs  jira_color_input.rs  jira_component_field.rs  jira_date_field.rs  jira_date_input.rs  jira_date_time_field.rs  jira_date_time_input.rs  jira_duration_field.rs  jira_group_input.rs  jira_issue_fields.rs  jira_issue_type_field.rs  jira_labels_field.rs  jira_labels_input.rs  jira_multi_select_component_field.rs  jira_multiple_group_picker_field.rs  jira_multiple_select_field.rs  jira_multiple_select_user_picker_field.rs  jira_multiple_version_picker_field.rs  jira_number_field.rs  jira_priority_field.rs  jira_rich_text_field.rs  jira_rich_text_input.rs  jira_selected_option_field.rs  jira_single_group_picker_field.rs  (+24 more)
(+82 files in other folders)
