[package]
name = "learn-rata"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
directories = "5.0.1"
lazy_static = "1.5.0"
ratatui = "0.28.1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = { version = "0.1.14" }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
base64 = "0.13"
serde_json = "1.0"
