[package]
name = "jira_cloud_v3_async"
version = "0.1.2"
authors = ["ecosystem@atlassian.com"]
description = "Jira Cloud platform REST API documentation"
license = "Apache 2.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
reqwest-middleware = { version = "^0.3", features = ["json", "multipart"] }
